--- a/package.json
+++ b/package.json
@@ -9,26 +9,24 @@
     "test": "jest --runInBand"
   },
   "dependencies": {
-    "@fastify/websocket": "^7.2.0",
-    "bullmq": "^1.66.0",
-    "dotenv": "^16.0.0",
-    "fastify": "^4.8.0",
-    "ioredis": "^5.3.0",
-    "pg": "^8.11.0",
-    "uuid": "^9.0.0",
-    
-    "ws": "^8.18.3"
+  "fastify": "^4.8.0",
+  "@fastify/websocket": "^7.2.0",
+  "bullmq": "^1.66.0",
+  "dotenv": "^16.0.0",
+  "ioredis": "^5.3.0",
+  "pg": "^8.11.0",
+  "uuid": "^9.0.0",
+  "ws": "^8.18.3"
   },
  "devDependencies": {
-    "@types/jest": "^30.0.0",
-    "@types/node": "^20.19.25",
-    "@types/uuid": "^9.0.8",
-    "@types/ws": "^8.18.1",
-    "jest": "^30.2.0",
-    "ts-jest": "^29.4.5",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.0"
+  "typescript": "^5.3.3",
+  "ts-node": "^10.9.1",
+  "ts-node-dev": "^2.0.0",
+  "jest": "^30.2.0",
+  "ts-jest": "^29.4.5",
+  "@types/jest": "^30.0.0",
+  "@types/node": "^20.0.0",
+  "@types/ws": "^8.18.1",
+  "@types/uuid": "^9.0.8"
 }
-
 }
