--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "start": "node dist/server.js",
-    "build": "tsc",
-    "test": "jest --runInBand"
+   "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+  "start": "node dist/server.js",
+  "build": "tsc",
+  "worker": "node dist/worker.js",
+  "test": "jest --runInBand"
   },
   "dependencies": {
   "fastify": "^4.8.0",
