--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "dist/server.js",
   "scripts": {
-   "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-  "start": "node dist/server.js",
+  "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
   "build": "tsc",
-  "worker": "node dist/worker.js",
+  "start": "node dist/server.js",
+  "worker": "node dist/workers/order.worker.js",
   "test": "jest --runInBand"
   },
   "dependencies": {
@@ -20,7 +20,7 @@
   "ws": "^8.18.3"
   },
  "devDependencies": {
-  "typescript": "^5.3.3",
+ "typescript": "^5.3.3",
   "ts-node": "^10.9.1",
   "ts-node-dev": "^2.0.0",
   "jest": "^30.2.0",
